Modeles v 1.3.10 - Fix z-index mainnav

--- a/css/cssc-modeles.css
+++ b/css/cssc-modeles.css
@@ -3,7 +3,7 @@
 /*
 Name: Modèles basiques
 URL: http://github.com/Darklg/CSSCommon
-Version: 1.3.9
+Version: 1.3.10
 License: MIT
 */
 
@@ -55,7 +55,13 @@ License: MIT
    ------------------------------------------------------- */
 
 .cssc-mainnav {
+    z-index: 1;
+    position: relative;
     vertical-align: middle;
+}
+
+.cssc-mainnav:hover {
+    z-index: 2;
 }
 
 .cssc-mainmenu {
